--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,28 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
+.contenedor {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   margin: 0;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.cuadrado {
+  width: 200px;
+  height: 200px;
+  background-color: #1B065E; /* Color de fondo inicial */
+  border: 2px solid #FF47DA; /* Borde */
+  border-radius: 10px; /* Esquinas redondeadas */
+  cursor: pointer; /* Para indicar que es interactivo */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra inicial */
+  transition: background-color 0.5s, box-shadow 0.5s, transform 0.5s; /* Transición suave para color, sombra y transform */
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.cuadrado:hover {
+  background-color: #FFE347; /* Nuevo color de fondo al hacer hover */
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); /* Sombra más pronunciada al hacer hover */
 }
+
+.cuadrado.clicado {
+  transform: rotate(45deg) scale(1.5); /* Giro de 45° y aumento de tamaño */
+}
+
